# caribou

./: CMakeLists.txt
.github/workflows/: ubuntu.yml
bindings/Plugin/Ode/: LegacyStaticODESolver.cpp
bindings/Topology/: CMakeLists.txt
cmake/: FindEigen3.cmake  caribouTools.cmake
doc/sphinx/source/: index.rst  static_ode_doc.rst
scenes/: backward_euler.py
src/Caribou/: CMakeLists.txt  CaribouConfig.cmake.in
src/Caribou/Algebra/: AlgebraConfig.cmake.in
src/Caribou/Geometry/: GeometryConfig.cmake.in
src/Caribou/Mechanics/: MechanicsConfig.cmake.in
src/Caribou/Python/Topology/: CMakeLists.txt
src/Caribou/Topology/: TopologyConfig.cmake.in
src/Caribou/Topology/Python/test/: Caribou.Topology.Test.py
src/Plugin/: CMakeLists.txt
src/Plugin/Ode/: BackwardEulerODESolver.cpp  BackwardEulerODESolver.h  NewtonRaphsonSolver.cpp  NewtonRaphsonSolver.h  StaticODESolver.cpp  StaticODESolver.h
src/SofaCaribou/: CMakeLists.txt  SofaCaribouConfig.cmake.in  config.h.in  init.cpp
src/SofaCaribou/Algebra/: BaseVectorOperations.cpp  BaseVectorOperations.h  EigenMatrix.h  EigenVector.h
src/SofaCaribou/Forcefield/: FictitiousGridElasticForce.h  FictitiousGridHyperelasticForce.cpp  FictitiousGridHyperelasticForce.h  HexahedronElasticForce.h  HyperelasticForcefield.cpp  HyperelasticForcefield.h  HyperelasticForcefield.inl  TetrahedronElasticForce.h  TractionForce.h
src/SofaCaribou/Material/: HyperelasticMaterial.h  NeoHookeanMaterial.h
src/SofaCaribou/Ode/: BackwardEulerODESolver.h  LegacyStaticODESolver.h  NewtonRaphsonSolver.h  StaticODESolver.h
src/SofaCaribou/Python/: CMakeLists.txt
src/SofaCaribou/Solver/: ConjugateGradientSolver.cpp  ConjugateGradientSolver.h  EigenSolver.h  LDLTSolver.h  LLTSolver.h  LUSolver.h
src/SofaCaribou/Topology/: CircleIsoSurface.h  CylinderIsoSurface.h  FictitiousGrid.cpp  FictitiousGrid.h  IsoSurface.h  SphereIsoSurface.h
src/SofaCaribou/Visitor/: AssembleGlobalMatrix.cpp  AssembleGlobalMatrix.h  ConstrainGlobalMatrix.cpp  ConstrainGlobalMatrix.h  MultiVecEqualVisitor.h
tests/Caribou/Geometry/: CMakeLists.txt
tests/Caribou/Mechanics/: CMakeLists.txt
tests/Caribou/Topology/: CMakeLists.txt  main.cpp
tests/SofaCaribou/: CMakeLists.txt
unittest/Geometry/: CMakeLists.txt
unittest/Mechanics/: CMakeLists.txt
unittest/Plugin/: CMakeLists.txt
unittest/Plugin/Algebra/: test_base_vector_operations.cpp
unittest/Plugin/ODE/: test_static.cpp
unittest/SofaCaribou/: main.cpp
unittest/Topology/: CMakeLists.txt
